--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -4626,6 +4626,7 @@ default-value-enabled=القيمة الافتراضية (ممكَّن)
 default-value-x=القيمة الافتراضية ({0})
 default-values=إستخدم القيم الإعتيادية
 default-view=طريقة العرض الافتراضية
+default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
 default-viewport=منفذ العرض الافتراضي
 default-was-changed=تم تغيير الافتراضي
 default-workflow-for-all-document-types=سير العمل الافتراضي لكافة أنواع المستندات
