--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -4626,6 +4626,7 @@ default-value-enabled=Standardværdi (aktiveret) (Automatic Translation)
 default-value-x=Default Value ({0}) (Automatic Copy)
 default-values=Standardværdier
 default-view=Standardvisning (Automatic Translation)
+default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
 default-viewport=Default Viewport (Automatic Copy)
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=Standard arbejdsproces for alle dokumenttyper
