--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -4626,6 +4626,7 @@ default-value-enabled=Standardwert (aktiv)
 default-value-x=Standardwert ({0})
 default-values=Standardwerte
 default-view=Standardansicht
+default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
 default-viewport=Standard-Viewport
 default-was-changed=Standard wurde geändert
 default-workflow-for-all-document-types=Standardworkflow für alle Dokumententypen
