--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -4626,6 +4626,7 @@ default-value-enabled=Προκαθορισμένη τιμή (ενεργή)
 default-value-x=Default Value ({0}) (Automatic Copy)
 default-values=Προκαθορισμένες τιμές
 default-view=Προεπιλεγμένη προβολή (Automatic Translation)
+default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
 default-viewport=Default Viewport (Automatic Copy)
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=Προκαθορισμένη ροή εργασιών για όλους τους τύπους εγγράφων
