--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -4626,6 +4626,7 @@ default-value-enabled=Valor por defecto (Habilitado)
 default-value-x=Valor por defecto ({0})
 default-values=Valores por defecto
 default-view=Vista por defecto
+default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
 default-viewport=Área de visualización por defecto
 default-was-changed=Se cambió el valor por defecto
 default-workflow-for-all-document-types=Workflow por defecto para todos los tipos de documentos
