--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -4626,6 +4626,7 @@ default-value-enabled=مقادیر پیش‌فرض (فعال)
 default-value-x=مقدار پیش فرض ({0})
 default-values=مقادیر پیش‌فرض
 default-view=نمای پیش‌فرض
+default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
 default-viewport=Default Viewport (Automatic Copy)
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=گردشکار پیش‌فرض برای تمام انواع سند
