--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -4626,6 +4626,7 @@ default-value-enabled=डिफ़ॉल्ट मूल्य (सक्षम)
 default-value-x=Default Value ({0}) (Automatic Copy)
 default-values=डिफ़ॉल्ट मूल्य
 default-view=सहज दृश्य
+default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
 default-viewport=Default Viewport (Automatic Copy)
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=सभी दस्तावेज़ प्रकारों के लिए डिफ़ॉल्ट कार्यप्रवाह (Automatic Translation)
