--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -4626,6 +4626,7 @@ default-value-enabled=Nilai Standar (Diaktifkan)
 default-value-x=Default Value ({0}) (Automatic Copy)
 default-values=Nilai Default
 default-view=Kegagalan Pandangan
+default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
 default-viewport=Default Viewport (Automatic Copy)
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=Standar Workflow untuk semua Tipe Dokumen
