--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -4626,6 +4626,7 @@ default-value-enabled=ערך ברירת מחדל (פעיל)
 default-value-x=ערך ברירת מחדל ({0})
 default-values=ערכי ברירת מחדל
 default-view=מבט ברירת מחדל
+default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
 default-viewport=Default Viewport (Automatic Copy)
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=זרימת העבודה המוגדרת כברירת מחדל עבור כל סוגי המסמכים
