--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -4626,6 +4626,7 @@ default-value-enabled=기본 값(사용 가능) (Automatic Translation)
 default-value-x=Default Value ({0}) (Automatic Copy)
 default-values=기정값
 default-view=기본 보기 (Automatic Translation)
+default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
 default-viewport=Default Viewport (Automatic Copy)
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=모든 문서 유형에 대한 기본 워크플로 (Automatic Translation)
