--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -4626,6 +4626,7 @@ default-value-enabled=Numatytoji reikšmė (įjungta) (Automatic Translation)
 default-value-x=Default Value ({0}) (Automatic Copy)
 default-values=Numatytosios reikšmės (Automatic Translation)
 default-view=Numatytasis rodinys (Automatic Translation)
+default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
 default-viewport=Default Viewport (Automatic Copy)
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=Numatytoji darbo eiga visiems dokumentų tipams (Automatic Translation)
