--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -4626,6 +4626,7 @@ default-value-enabled=Predvolená hodnota (Povolená)
 default-value-x=Predvolená hodnota ({0})
 default-values=Predvolené hodnoty
 default-view=Predvolený pohľad
+default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
 default-viewport=Default Viewport (Automatic Copy)
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=Predvolený workflow pre všetky typy dokumentov
