--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -4626,6 +4626,7 @@ default-value-enabled=Значення за промовчанням (увімк
 default-value-x=Default Value ({0}) (Automatic Copy)
 default-values=Всілякі значення по замовчуванню
 default-view=Подання за промовчанням (Automatic Translation)
+default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
 default-viewport=Default Viewport (Automatic Copy)
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=Робочий цикл за промовчанням для всіх типів документів (Automatic Translation)
