--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -4626,6 +4626,7 @@ default-value-enabled=Giá trị mặc định ( Cho phép)
 default-value-x=Default Value ({0}) (Automatic Copy)
 default-values=Các giá trị mặc định
 default-view=Dạng xem Mặc định (Automatic Translation)
+default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
 default-viewport=Default Viewport (Automatic Copy)
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=Quy trình xử lý mặc định cho tất cả các kiểu tài liệu
