--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -4626,6 +4626,7 @@ default-value-enabled=默认值（开启）
 default-value-x=默认值 ({0})
 default-values=默认值
 default-view=默认视图
+default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
 default-viewport=默认视口
 default-was-changed=默认值已更改
 default-workflow-for-all-document-types=所有文档类型的默认工作流
