--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -4626,6 +4626,7 @@ default-value-enabled=預設值(啟用)
 default-value-x=預設值({0})
 default-values=預設值
 default-view=預設檢視
+default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
 default-viewport=預設視圖
 default-was-changed=預設值已變更
 default-workflow-for-all-document-types=預設所有文件類型的工作流程
