--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -4626,6 +4626,7 @@ default-value-enabled=Výchozí hodnota (povoleno)
 default-value-x=Default Value ({0}) (Automatic Copy)
 default-values=Výchozí hodnoty
 default-view=Výchozí zobrazení
+default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
 default-viewport=Default Viewport (Automatic Copy)
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=Výchozí workflow pro všechny typy dokumentů
