--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_AU.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en_AU.properties
@@ -4626,6 +4626,7 @@ default-value-enabled=Default Value (Enabled) (Automatic Copy)
 default-value-x=Default Value ({0}) (Automatic Copy)
 default-values=Default Values (Automatic Copy)
 default-view=Default View (Automatic Copy)
+default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
 default-viewport=Default Viewport (Automatic Copy)
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=Default Workflow for all Document Types (Automatic Copy)
