--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_eu.properties
@@ -4626,6 +4626,7 @@ default-value-enabled=Balio lehenetsia (Gaituta)
 default-value-x=Default Value ({0}) (Automatic Copy)
 default-values=Balio lehenetsiak
 default-view=Ikuspegi Lehenetsia
+default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
 default-viewport=Default Viewport (Automatic Copy)
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=Lan-fluxu lehenetsia dokumentu mota guztientzat
