--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -4626,6 +4626,7 @@ default-value-enabled=Valeur par défaut (Activé)
 default-value-x=Valeur par défaut ({0})
 default-values=Valeurs par défaut
 default-view=Vue par défaut
+default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
 default-viewport=Fenêtre d'affichage par défaut
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=Processus (workflow) par défaut pour tous les types de document
