--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -4625,6 +4625,7 @@ default-value-enabled=Valore Predefinito (Abilitato)
 default-value-x=Valore Predefinito ({0})
 default-values=Valori Predefiniti
 default-view=Visualizzazione Predefinita
+default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
 default-viewport=Default Viewport (Automatic Copy)
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=Workflow predefinito per tutti i tipi di documenti
