--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -4626,6 +4626,7 @@ default-value-enabled=Nilai Lalai (Didayakan) (Automatic Translation)
 default-value-x=Default Value ({0}) (Automatic Copy)
 default-values=Nilai Lalai (Automatic Translation)
 default-view=Paparan Lalai (Automatic Translation)
+default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
 default-viewport=Default Viewport (Automatic Copy)
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=Aliran Kerja Lalai untuk semua Jenis Dokumen (Automatic Translation)
