--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -4626,6 +4626,7 @@ default-value-enabled=Значение по умолчанию (Включено
 default-value-x=Default Value ({0}) (Automatic Copy)
 default-values=Значения по умолчанию
 default-view=Вид по умолчанию
+default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
 default-viewport=Default Viewport (Automatic Copy)
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=Рабочий процесс по умолчанию для всех типов документов
