--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -4626,6 +4626,7 @@ default-value-enabled=Default Value (Enabled) (Automatic Copy)
 default-value-x=Default Value ({0}) (Automatic Copy)
 default-values=இயல்புநிலை மதிப்புகள்
 default-view=இயல்புநிலை view
+default-view-must-be-at-least-one-column=Default view must be at least one column. (Automatic Copy)
 default-viewport=Default Viewport (Automatic Copy)
 default-was-changed=Default Was Changed (Automatic Copy)
 default-workflow-for-all-document-types=இயல்புநிலை Workflow ஆவண வகை
