--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=تعليقات المقالات ممكَّنة
 article-display-style=طريقة عرض المقالة
 article-id=معرِّف المقالة
 article-increment-priority-enabled=أولوية زيادة المقالة ممكَّنة
-article-is-expired-or-not-displayable=المقالة منتهية الصلاحية أو لم تعد قابلة للعرض.
+article-is-not-displayable=Article is not displayable (Automatic Copy)
 article-or-folder=مقالة أو مجلد
 article-updated-email=حدثت المقالة بوسطة البريد الالكتروني
 article-version=نسخة المقالة
