--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Comentaris de l'article habilitats
 article-display-style=Estil de visualització de l'Article
 article-id=ID d'article
 article-increment-priority-enabled=Prioritat d'increment d'article habilitada
-article-is-expired-or-not-displayable=L'article ha caducat o no es pot mostrar.
+article-is-not-displayable=Article is not displayable (Automatic Copy)
 article-or-folder=Article o Carpeta
 article-updated-email=Article actualitzat per Email
 article-version=Versió de l'article
