--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Komentáře k článku povoleny (Automatic Translation)
 article-display-style=Styl zobrazení článku
 article-id=ID článku (Automatic Translation)
 article-increment-priority-enabled=Povolená priorita přírůstku článku (Automatic Translation)
-article-is-expired-or-not-displayable=Article is expired or not displayable. (Automatic Copy)
+article-is-not-displayable=Article is not displayable (Automatic Copy)
 article-or-folder=Článek nebo složka (Automatic Translation)
 article-updated-email=E-mail o aktualizaci článku
 article-version=Verze článku (Automatic Translation)
