--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=ArtikelKommentarer er aktiveret (Automatic Translation)
 article-display-style=Visningstypografi for artikel (Automatic Translation)
 article-id=Artikel-id (Automatic Translation)
 article-increment-priority-enabled=Prioritet for forøgelse af artikel aktiveret (Automatic Translation)
-article-is-expired-or-not-displayable=Article is expired or not displayable. (Automatic Copy)
+article-is-not-displayable=Article is not displayable (Automatic Copy)
 article-or-folder=Artikel eller mappe (Automatic Translation)
 article-updated-email=Artikel Opdateret e-mail (Automatic Translation)
 article-version=Artikel Version (Automatic Translation)
