--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Artikelkommentare aktiviert
 article-display-style=Darstellungsstil von Artikeln
 article-id=Artikel-ID
 article-increment-priority-enabled=Priorität Artikelerhöhung aktiviert
-article-is-expired-or-not-displayable=Der Artikel ist abgelaufen oder kann nicht angezeigt werden.
+article-is-not-displayable=Article is not displayable (Automatic Copy)
 article-or-folder=Artikel oder Verzeichnis
 article-updated-email=E-Mail: Artikel aktualisiert
 article-version=Artikelversion
