--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=نظرات فعال شد
 article-display-style=ساختار نمایش محتوا
 article-id=شناسه مقاله
 article-increment-priority-enabled=ماده افزایش اولویت فعال (Automatic Translation)
-article-is-expired-or-not-displayable=Article is expired or not displayable. (Automatic Copy)
+article-is-not-displayable=Article is not displayable (Automatic Copy)
 article-or-folder=مقاله یا پوشه
 article-updated-email=محتوا ایمیل را بروزرسانی کرد.
 article-version=نسخه مقاله (Automatic Translation)
