--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Komentar Artikel Diaktifkan (Automatic Translation)
 article-display-style=Style Tampilan Artikel
 article-id=ID Artikel (Automatic Translation)
 article-increment-priority-enabled=Prioritas Kenaikan Artikel Diaktifkan (Automatic Translation)
-article-is-expired-or-not-displayable=Article is expired or not displayable. (Automatic Copy)
+article-is-not-displayable=Article is not displayable (Automatic Copy)
 article-or-folder=Artikel atau Folder (Automatic Translation)
 article-updated-email=Artikel yang diperbarui Email
 article-version=Versi Artikel (Automatic Translation)
