--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -1768,7 +1768,7 @@ article-comments-enabled=Commenti articolo abilitati (Automatic Translation)
 article-display-style=Stile di visualizzazione Articolo
 article-id=ID Articolo.
 article-increment-priority-enabled=Incremento priorità articoli abilitato
-article-is-expired-or-not-displayable=Article is expired or not displayable. (Automatic Copy)
+article-is-not-displayable=Article is not displayable (Automatic Copy)
 article-or-folder=Articolo o Cartella
 article-updated-email=Email Aggiornata per l'articolo
 article-version=Versione articolo (Automatic Translation)
