--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=문서 댓글 사용 가능 (Automatic Translation)
 article-display-style=아티클 디스플레이 스타일 (Automatic Translation)
 article-id=기사 ID (Automatic Translation)
 article-increment-priority-enabled=문서 증분 우선 순위 사용 (Automatic Translation)
-article-is-expired-or-not-displayable=Article is expired or not displayable. (Automatic Copy)
+article-is-not-displayable=Article is not displayable (Automatic Copy)
 article-or-folder=기사 또는 폴더 (Automatic Translation)
 article-updated-email=문서 업데이트 된 이메일 (Automatic Translation)
 article-version=기사 버전 (Automatic Translation)
