--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Straipsnis Komentarai įgalinti (Automatic Translation)
 article-display-style=Straipsnio rodymo stilius (Automatic Translation)
 article-id=Straipsnio ID (Automatic Translation)
 article-increment-priority-enabled=Straipsnis Didinimo prioritetas įgalintas (Automatic Translation)
-article-is-expired-or-not-displayable=Article is expired or not displayable. (Automatic Copy)
+article-is-not-displayable=Article is not displayable (Automatic Copy)
 article-or-folder=Straipsnis arba aplankas (Automatic Translation)
 article-updated-email=Straipsnis Atnaujintas el. paštas (Automatic Translation)
 article-version=Straipsnio versija (Automatic Translation)
