--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Komen Artikel Didayakan (Automatic Translation)
 article-display-style=Gaya Paparan Artikel (Automatic Translation)
 article-id=Perkara ID (Automatic Translation)
 article-increment-priority-enabled=Keutamaan Kenaikan Artikel Didayakan (Automatic Translation)
-article-is-expired-or-not-displayable=Article is expired or not displayable. (Automatic Copy)
+article-is-not-displayable=Article is not displayable (Automatic Copy)
 article-or-folder=Perkara atau Folder (Automatic Translation)
 article-updated-email=Artikel Dikemaskini E-mel (Automatic Translation)
 article-version=Versi Artikel (Automatic Translation)
