--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Artikkelkommentarer aktivert
 article-display-style=Artikkelvisningstil
 article-id=Artikkel-ID
 article-increment-priority-enabled=Artikkeløkningsprioritet aktivert
-article-is-expired-or-not-displayable=Article is expired or not displayable. (Automatic Copy)
+article-is-not-displayable=Article is not displayable (Automatic Copy)
 article-or-folder=Artikkel eller mappe
 article-updated-email=Artikkel oppdatert e-post
 article-version=Artikkelversjon
