--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Reacties ingeschakeld voor artikel
 article-display-style=Weergavestijl voor artikel
 article-id=Artikel ID
 article-increment-priority-enabled=Prioriteit artikelincrement ingeschakeld
-article-is-expired-or-not-displayable=Het artikel is verlopen of kan niet worden weergegeven.
+article-is-not-displayable=Article is not displayable (Automatic Copy)
 article-or-folder=Artikel of Map
 article-updated-email=E-mail: 'Artikel bijgewerkt'
 article-version=Artikelversie
