--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Włączone komentarze do artykułu (Automatic Translati
 article-display-style=Styl wyświetlania artykułu
 article-id=Identyfikator artykułu (Automatic Translation)
 article-increment-priority-enabled=Artykuł Włączono priorytet przyrostu (Automatic Translation)
-article-is-expired-or-not-displayable=Article is expired or not displayable. (Automatic Copy)
+article-is-not-displayable=Article is not displayable (Automatic Copy)
 article-or-folder=Artykuł lub katalog
 article-updated-email=Powiadomienie email o aktualizacji artykułu
 article-version=Wersja artykułu (Automatic Translation)
