--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Comentários de artigo ativados (Automatic Translation)
 article-display-style=Estilo de Visualização do Artigo
 article-id=ID do artigo
 article-increment-priority-enabled=Prioridade de incremento de artigo habilitada (Automatic Translation)
-article-is-expired-or-not-displayable=Article is expired or not displayable. (Automatic Copy)
+article-is-not-displayable=Article is not displayable (Automatic Copy)
 article-or-folder=Artigo ou Pasta
 article-updated-email=Email do artigo atualizado
 article-version=Versão do artigo (Automatic Translation)
