--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Comentarii articol activat (Automatic Translation)
 article-display-style=Stil afișare articol (Automatic Translation)
 article-id=ID articol (Automatic Translation)
 article-increment-priority-enabled=Prioritate increment articol activată (Automatic Translation)
-article-is-expired-or-not-displayable=Article is expired or not displayable. (Automatic Copy)
+article-is-not-displayable=Article is not displayable (Automatic Copy)
 article-or-folder=Articol sau folder (Automatic Translation)
 article-updated-email=E-mail actualizat articol (Automatic Translation)
 article-version=Versiune articol (Automatic Translation)
