--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Статья Комментарии Включено (A
 article-display-style=Стиль отображения статьи
 article-id=Идентификатор статьи (Automatic Translation)
 article-increment-priority-enabled=Статья Приращение Приоритет Включено (Automatic Translation)
-article-is-expired-or-not-displayable=Article is expired or not displayable. (Automatic Copy)
+article-is-not-displayable=Article is not displayable (Automatic Copy)
 article-or-folder=Статья или папка (Automatic Translation)
 article-updated-email=Оповещение об изменении статьи
 article-version=Версия статьи (Automatic Translation)
