--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Komentarji članka omogočeni (Automatic Translation)
 article-display-style=Slog prikaza članka (Automatic Translation)
 article-id=ID člena (Automatic Translation)
 article-increment-priority-enabled=Prednostna naloga pri privzetju članka je omogočena (Automatic Translation)
-article-is-expired-or-not-displayable=Article is expired or not displayable. (Automatic Copy)
+article-is-not-displayable=Article is not displayable (Automatic Copy)
 article-or-folder=Članek ali mapa (Automatic Translation)
 article-updated-email=Članek Posodobljena e-pošta (Automatic Translation)
 article-version=Različica članka (Automatic Translation)
