--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Artikelkommentarer är aktiverade
 article-display-style=Artikelns visningsstil
 article-id=Artikel-ID
 article-increment-priority-enabled=Ökningsprioritet för artikel aktiverat
-article-is-expired-or-not-displayable=Artikeln har slutat gälla eller kan inte visas.
+article-is-not-displayable=Article is not displayable (Automatic Copy)
 article-or-folder=Artikel eller mapp
 article-updated-email=E-post för artikel uppdaterad
 article-version=Artikelversion
