--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Makale Açıklamaları Etkin (Automatic Translation)
 article-display-style=Makale Görüntüleme Stili (Automatic Translation)
 article-id=Makale Kimliği (Automatic Translation)
 article-increment-priority-enabled=Makale Artış Önceliği Etkin (Automatic Translation)
-article-is-expired-or-not-displayable=Article is expired or not displayable. (Automatic Copy)
+article-is-not-displayable=Article is not displayable (Automatic Copy)
 article-or-folder=Makale veya Klasör (Automatic Translation)
 article-updated-email=Makale Güncelleştirilmiş E-posta (Automatic Translation)
 article-version=Makale Sürümü (Automatic Translation)
