--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Примітки до статті ввімкнуто (
 article-display-style=Стиль відображення статті (Automatic Translation)
 article-id=Ідентифікатор статті (Automatic Translation)
 article-increment-priority-enabled=Статтю з увімкненим пріоритетом збільшення (Automatic Translation)
-article-is-expired-or-not-displayable=Article is expired or not displayable. (Automatic Copy)
+article-is-not-displayable=Article is not displayable (Automatic Copy)
 article-or-folder=Стаття або папка (Automatic Translation)
 article-updated-email=Стаття Оновлена електронна пошта (Automatic Translation)
 article-version=Версія статті (Automatic Translation)
