--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Đã bật Chú thích Bài viết (Automatic Translati
 article-display-style=Kiểu Hiển thị Bài viết (Automatic Translation)
 article-id=ID bài viết (Automatic Translation)
 article-increment-priority-enabled=Ưu tiên tăng 0 bài viết được bật (Automatic Translation)
-article-is-expired-or-not-displayable=Article is expired or not displayable. (Automatic Copy)
+article-is-not-displayable=Article is not displayable (Automatic Copy)
 article-or-folder=Bài viết hoặc Cặp (Automatic Translation)
 article-updated-email=Bài viết Cập nhật Email (Automatic Translation)
 article-version=Phiên bản bài viết (Automatic Translation)
