--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=启用文章评论
 article-display-style=文章显示风格
 article-id=文章编号
 article-increment-priority-enabled=启用文章增量优先级
-article-is-expired-or-not-displayable=文章已过期或无法显示。
+article-is-not-displayable=Article is not displayable (Automatic Copy)
 article-or-folder=文章或文件夹
 article-updated-email=邮件的文章已更新
 article-version=文章版本
