--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Commentaires d'article autorisés
 article-display-style=Style d'affichage de l'article
 article-id=ID article
 article-increment-priority-enabled=Priorité d'incrémentation d'article activée
-article-is-expired-or-not-displayable=L'article est expiré ou ne peut pas être affiché.
+article-is-not-displayable=Article is not displayable (Automatic Copy)
 article-or-folder=Article ou Dossier
 article-updated-email=Courriel de mise-à-jour d'article
 article-version=Version d'article
